[package]
name = "onemoretime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = [] }
simplelog = "0.12.1"
config = { version = "0.13.4", features = [] }
anyhow = "1.0.77"

cocoa = "0.25.0"
core-graphics = {version = "0.23.1", features = ["highsierra"]}
core-foundation = {version = "0.9.4" }
core-foundation-sys = {version = "0.8.6" }

serde = { version = "1.0.193", features = ["derive"] }
confy = "0.5.1"