[package]
name = "keyscripten-core"
version = "0.0.0"
description = "keyscripten-core"
authors = ["Tokuhiro Matsuno"]
license = "MIT"
repository = "https://github.com/tokuhirom/keyscripten"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dev-dependencies]
tempfile = "3.10.0"
env_logger = "0.11.0"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"

log = { version = "0.4.20", features = [] }
fern = "0.6.2"
chrono = "0.4.33"

anyhow = "1.0.79"

cocoa = "0.25.0"

dirs = "5.0.1"

apple-sys = { version = "0.2.0", features = ["CoreGraphics", "CoreFoundation"] }

boa_engine = { version = "0.17.3", features = [] }
boa_runtime = { version = "0.17.3" }
boa_gc = "0.17.3"
console = "0.15.8"
object = "0.32.2"
time = "0.3.31"
env_logger = "0.11.0"
matches = { version = "0.1.10", features = [] }

rustc-hash = { version = "1.1.0", features = ["std"] }
lazy_static = { version = "1.4.0", features = [] }
