[package]
name = "keyscripten-core"
version = "0.0.0"
description = "keyscripten-core"
authors = ["Tokuhiro Matsuno"]
license = "MIT"
repository = "https://github.com/tokuhirom/keyscripten"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[dev-dependencies]
tempfile = "3.10.1"
env_logger = "0.11.3"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

log = { version = "0.4.21", features = [] }
fern = "0.6.2"
chrono = "0.4.37"

anyhow = "1.0.82"

cocoa = "0.25.0"

dirs = "5.0.1"

apple-sys = { version = "0.2.0", features = ["CoreGraphics", "CoreFoundation"] }

boa_engine = { version = "0.18.0", features = [] }
boa_runtime = { version = "0.18.0" }
boa_gc = "0.18.0"
console = "0.15.8"
object = "0.35.0"
time = "0.3.36"
env_logger = "0.11.3"
matches = { version = "0.1.10", features = [] }

rustc-hash = { version = "1.1.0", features = ["std"] }
lazy_static = { version = "1.4.0", features = [] }
