[package]
name = "codekeys"
version = "0.0.0"
description = "A Tauri App"
authors = ["Tokuhiro Matsuno"]
license = "MIT"
repository = "https://github.com/tokuhirom/codekeys"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-close", "shell-open", "system-tray", "config-json5"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

log = { version = "0.4.20", features = [] }
fern = "0.6.2"
chrono = "0.4.31"

config = { version = "0.13.4", features = [] }

anyhow = "1.0.79"

confy = "0.5.1"

dirs = "5.0.1"

codekeys-core = {path = "../codekeys-core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
