[package]
name = "keyscripten"
version = "0.0.0"
description = "A Tauri App"
authors = ["Tokuhiro Matsuno"]
license = "MIT"
repository = "https://github.com/tokuhirom/keyscripten"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [ "window-close", "shell-open", "system-tray", "config-json5"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

log = { version = "0.4.21", features = [] }
fern = { version = "0.6.2", features = ["date-based"] }
chrono = "0.4.38"

config = { version = "0.14.0", features = [] }

anyhow = "1.0.82"

dirs = "5.0.1"

thread-id = "4.2.1"

keyscripten-core = {path = "../keyscripten-core" }
lazy_static = { version = "1.4.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
